maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:43: error: not found: value c
    while(c!=0){
          ^PledgeMaze:43: error: type mismatch;
 found   : Unit
 required: Boolean
    while(c!=0){
    ^